# diffpdf

./: .gitignore  CHANGES  CMakeLists.txt  README  aboutform.cpp  diffpdf.1.cmake  diffpdf_0.4.0.orig.tar.gz.delta  diffpdf_0.5.0.orig.tar.gz.delta  diffpdf_0.6.0.orig.tar.gz.delta  diffpdf_1.0.0.orig.tar.gz.delta  diffpdf_1.1.1.orig.tar.gz.delta  diffpdf_1.1.2.orig.tar.gz.delta  diffpdf_1.1.3.orig.tar.gz.delta  diffpdf_1.1.4.orig.tar.gz.delta  diffpdf_1.1.5.orig.tar.gz.delta  diffpdf_1.1.5.orig.tar.gz.id  diffpdf_1.2.0.orig.tar.gz.delta  diffpdf_1.2.2.orig.tar.gz.delta  diffpdf_1.8.0.orig.tar.gz.delta  diffpdf_1.9.2.orig.tar.gz.delta  diffpdf_2.1.1.orig.tar.gz.delta  diffpdf_2.1.3.1.orig.tar.xz.delta  diffpdf_2.1.3.1.orig.tar.xz.id  diffpdf_2.1.3.orig.tar.gz.delta  diffpdf_cz.ts  diffpdf_de.ts  diffpdf_es.ts  diffpdf_fr.ts  eu.qtrac.diffpdf.desktop  generic.cpp  generic.hpp  helpform.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  optionsform.cpp  saveform.cpp  sequence_matcher.cpp  textitem.cpp
debian/: .gitignore  README.source  changelog  clean  control  copyright  diffpdf.desktop  diffpdf.doc-base  diffpdf.lintian-overrides  install  menu  rules  watch
debian/patches/: 00-fix_casting_error.patch  00-fix_typos.patch  0001-fix_manpage.patch  0002-buildflags.patch  0004-spelling.patch  0005-parallel-comparison.patch  0006-do-not-check-extension.patch  0007-desktop.patch  0008-cmake-OpenMP.patch  diffpdf-qt5.patch  series
debian/upstream/: metadata
path/to/: generic.hpp
